# cleanup-safari-tabs

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
prompts/: system_prompt_categorizer.txt
safari_tabs/: __main__.py  categorizer.py  extractor.py  sanitizer.py  vault_writer.py
tests/: test_sanitizer.py
