[tool.poetry]
name = "safari-tabs"
version = "0.1.0"
description = "Export open Safari tabs to a categorized Obsidian vault using Claude AI"
authors = ["Giulia"]
readme = "README.md"
packages = [{ include = "safari_tabs" }]

[tool.poetry.dependencies]
python = "^3.11"
anthropic = "^0.49.0"
python-dotenv = "^1.0.0"

[tool.poetry.scripts]
safari-tabs = "safari_tabs.__main__:main"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
